# MyInfo-Django-Integration

./: .gitignore  README.md  manage.py  pyproject.toml
myinfo_app/: apps.py  client.py  security.py  tests.py  urls.py  views.py
myinfo_project/: asgi.py  settings.py  urls.py  wsgi.py
